# robot_voice

./: .gitignore  CLAUDE.md  README.md  package.xml  setup.cfg  setup.py  testvoice.py
.claude/: bootstrap.md  codereview.md
.claude/commands/: newsesh.md
01-literate/: 00-overview.md  01-runtime.md  02-intent_mapper.md  03-voice_input_node.md  04-speech_output_node.md  X01-audio_feedback.md
02-doc/: current.md  notes.md  spec.md
03-features/: template.md
03-features/notdone/: F01-list-objects-voice-command.md
04-tasks/notdone/: TF01-list-objects-voice-command.md
config/: voice_config.yaml
dome_voice/: __init__.py  audio_feedback.py  intent_mapper.py  runtime.py  speech_output_node.py  voice_input_node.py
install/: local_setup.sh  setup.ps1  setup.sh
launch/: remote.launch.py  robot.launch.py
log/: latest_build
robot_voice/: __init__.py  audio_feedback.py  intent_mapper.py  runtime.py  voice_input_node.py
test/: test_intent_mapper.py  test_speech_output_node.py  test_voice_input_node.py  test_voice_runtime.py  test_voice_runtime_config.py
